--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,7 +88,7 @@
                 android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
@@ -97,19 +97,28 @@
                         android:id="@+id/steps"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:text="0 Steps"
                         android:textSize="16pt"
-                        android:layout_marginLeft="10dp"/>
+                        android:paddingLeft="15dp"
+                        android:paddingRight="15dp"
+                        android:textAlignment="center"
+                        android:layout_marginLeft="30dp"
+                        android:background="@drawable/border"/>
 
                     <TextView
                         android:id="@+id/kms"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text=" 0 Km"
-                        android:textSize="16pt" />
-                </LinearLayout>
+                        android:text="0 Km"
+                        android:layout_toRightOf="@id/steps"
+                        android:textSize="16pt"
+                        android:layout_marginLeft="150dp"
+                        android:textAlignment="center"
+                        android:paddingLeft="15dp"
+                        android:paddingRight="15dp"
+                        android:background="@drawable/border"/>
+
+                </RelativeLayout>
 
                 <RelativeLayout
                     android:layout_width="350dp"
